tests/error/ptr_from_const.gw
1 :=> var <~int~>Ptr i;
